release_evidence/2026-02-12-prod-readiness/gate-5/perf/command-logs/20260215T182028Z_bench_catalog_lookup_no_run.log
# command: cargo bench -p arco-catalog --bench catalog_lookup --no-run
# start_utc: 2026-02-15T18:20:28Z
   Compiling proc-macro2 v1.0.103
   Compiling unicode-ident v1.0.22
   Compiling quote v1.0.42
   Compiling libc v0.2.178
   Compiling cfg-if v1.0.4
   Compiling autocfg v1.5.0
   Compiling libm v0.2.15
   Compiling serde_core v1.0.228
   Compiling bytes v1.11.1
   Compiling zerocopy v0.8.31
   Compiling once_cell v1.21.3
   Compiling serde v1.0.228
   Compiling memchr v2.7.6
   Compiling version_check v0.9.5
   Compiling core-foundation-sys v0.8.7
   Compiling smallvec v1.15.1
   Compiling pin-project-lite v0.2.16
   Compiling getrandom v0.3.4
   Compiling itoa v1.0.16
   Compiling futures-core v0.3.31
   Compiling parking_lot_core v0.9.12
   Compiling find-msvc-tools v0.1.5
   Compiling shlex v1.3.0
   Compiling scopeguard v1.2.0
   Compiling lock_api v0.4.14
   Compiling iana-time-zone v0.1.64
   Compiling num-traits v0.2.19
   Compiling stable_deref_trait v1.2.1
   Compiling futures-sink v0.3.31
   Compiling ahash v0.8.12
   Compiling siphasher v1.0.1
   Compiling slab v0.4.11
   Compiling chrono-tz v0.10.4
   Compiling phf_shared v0.12.1
   Compiling futures-channel v0.3.31
   Compiling arrow-schema v54.3.1
   Compiling phf v0.12.1
   Compiling pin-utils v0.1.0
   Compiling futures-task v0.3.31
   Compiling futures-io v0.3.31
   Compiling zmij v1.0.13
   Compiling hashbrown v0.15.5
   Compiling tracing-core v0.1.36
   Compiling serde_json v1.0.149
   Compiling http v1.4.0
   Compiling base64 v0.22.1
   Compiling typenum v1.19.0
   Compiling equivalent v1.0.2
   Compiling litemap v0.8.1
   Compiling zeroize v1.8.2
   Compiling hashbrown v0.16.1
   Compiling writeable v0.6.2
   Compiling ryu v1.0.21
   Compiling lexical-util v1.0.7
   Compiling rustls-pki-types v1.13.2
   Compiling aho-corasick v1.1.4
   Compiling generic-array v0.14.7
   Compiling icu_properties_data v2.1.2
   Compiling syn v2.0.111
   Compiling indexmap v2.12.1
   Compiling icu_normalizer_data v2.1.1
   Compiling regex-syntax v0.8.8
   Compiling http-body v1.0.1
   Compiling httparse v1.10.1
   Compiling jobserver v0.1.34
   Compiling signal-hook-registry v1.4.7
   Compiling socket2 v0.6.1
   Compiling cc v1.2.50
   Compiling mio v1.1.1
   Compiling getrandom v0.2.16
   Compiling percent-encoding v2.3.2
   Compiling num-integer v0.1.46
   Compiling num-complex v0.4.6
   Compiling untrusted v0.9.0
   Compiling parking_lot v0.12.5
   Compiling num-bigint v0.4.6
   Compiling num-iter v0.1.45
   Compiling regex-automata v0.4.13
   Compiling lexical-write-integer v1.0.6
   Compiling lexical-parse-integer v1.0.6
   Compiling pkg-config v0.3.32
   Compiling semver v1.0.27
   Compiling rustls v0.23.35
   Compiling either v1.15.0
   Compiling bitflags v2.10.0
   Compiling fnv v1.0.7
   Compiling try-lock v0.2.5
   Compiling tower-service v0.3.3
   Compiling atomic-waker v1.1.2
   Compiling want v0.3.1
   Compiling rustc_version v0.4.1
   Compiling lexical-write-float v1.0.6
   Compiling lexical-parse-float v1.0.6
   Compiling ring v0.17.14
   Compiling zstd-sys v2.0.16+zstd.1.5.7
   Compiling core-foundation v0.10.1
   Compiling security-framework-sys v2.15.0
   Compiling crossbeam-utils v0.8.21
   Compiling subtle v2.6.1
   Compiling flatbuffers v24.12.23
   Compiling atoi v2.0.0
   Compiling num-rational v0.4.2
   Compiling synstructure v0.13.2
   Compiling lexical-core v1.0.6
   Compiling security-framework v3.5.1
   Compiling form_urlencoded v1.2.2
   Compiling sync_wrapper v1.0.2
   Compiling lazy_static v1.5.0
   Compiling num v0.4.3
   Compiling utf8_iter v1.0.4
   Compiling log v0.4.29
   Compiling ipnet v2.11.0
   Compiling tower-layer v0.3.3
   Compiling rand_core v0.6.4
   Compiling crypto-common v0.1.7
   Compiling block-buffer v0.10.4
   Compiling rand_core v0.9.3
   Compiling digest v0.10.7
   Compiling alloc-no-stdlib v2.0.4
   Compiling iri-string v0.7.9
   Compiling heck v0.5.0
   Compiling crc32fast v1.5.0
   Compiling same-file v1.0.6
   Compiling bitflags v1.3.2
   Compiling zstd-safe v7.2.4
   Compiling rustls-native-certs v0.8.2
   Compiling walkdir v2.5.0
   Compiling alloc-stdlib v0.2.2
   Compiling http-body-util v0.1.3
   Compiling crossbeam-epoch v0.9.18
   Compiling csv-core v0.1.13
   Compiling simd-adler32 v0.3.8
   Compiling paste v1.0.15
   Compiling zerocopy-derive v0.8.31
   Compiling serde_derive v1.0.228
   Compiling zerofrom-derive v0.1.6
   Compiling yoke-derive v0.8.1
   Compiling tokio-macros v2.6.0
   Compiling zerovec-derive v0.11.2
   Compiling displaydoc v0.2.5
   Compiling futures-macro v0.3.31
   Compiling tracing-attributes v0.1.31
   Compiling snafu-derive v0.8.9
   Compiling regex v1.12.2
   Compiling tokio v1.49.0
   Compiling futures-util v0.3.31
   Compiling simdutf8 v0.1.5
   Compiling zerofrom v0.1.6
   Compiling rayon-core v1.13.0
   Compiling snap v1.1.1
   Compiling adler2 v2.0.1
   Compiling thiserror v2.0.18
   Compiling tracing v0.1.44
   Compiling miniz_oxide v0.8.9
   Compiling matchers v0.2.0
   Compiling async-trait v0.1.89
   Compiling yoke v0.8.1
   Compiling snafu v0.8.9
   Compiling thiserror-impl v2.0.18
   Compiling csv v1.4.0
   Compiling crossbeam-deque v0.8.6
   Compiling brotli-decompressor v4.0.3
   Compiling md-5 v0.10.6
   Compiling tracing-log v0.2.0
   Compiling sharded-slab v0.1.7
   Compiling itertools v0.13.0
   Compiling ordered-float v2.10.1
   Compiling futures-executor v0.3.31
   Compiling cpufeatures v0.2.17
   Compiling futures v0.3.31
   Compiling rustls-pemfile v2.2.0
   Compiling thread_local v1.1.9
   Compiling humantime v2.3.0
   Compiling ciborium-io v0.2.2
   Compiling byteorder v1.5.0
   Compiling integer-encoding v3.0.4
   Compiling static_assertions v1.1.0
   Compiling nu-ansi-term v0.50.3
   Compiling anstyle v1.0.13
   Compiling twox-hash v2.1.2
   Compiling clap_lex v0.7.6
   Compiling plotters-backend v0.3.7
   Compiling zerovec v0.11.5
   Compiling zerotrie v0.2.3
   Compiling lz4_flex v0.11.5
   Compiling clap_builder v4.5.56
   Compiling half v2.7.1
   Compiling ppv-lite86 v0.2.21
   Compiling plotters-svg v0.3.7
   Compiling thrift v0.17.0
   Compiling rand_chacha v0.9.0
   Compiling rand_chacha v0.3.1
   Compiling twox-hash v1.6.3
   Compiling arrow-buffer v54.3.1
   Compiling ciborium-ll v0.2.2
   Compiling rand v0.8.5
   Compiling rand v0.9.2
   Compiling chrono v0.4.43
   Compiling serde_urlencoded v0.7.1
   Compiling arrow-data v54.3.1
   Compiling tokio-util v0.7.17
   Compiling tinystr v0.8.2
   Compiling potential_utf v0.1.4
   Compiling icu_locale_core v2.1.1
   Compiling tower v0.5.3
   Compiling icu_collections v2.1.1
   Compiling quick-xml v0.37.5
   Compiling tracing-serde v0.2.0
   Compiling h2 v0.4.12
   Compiling tower-http v0.6.8
   Compiling tracing-subscriber v0.3.22
   Compiling ulid v1.2.1
   Compiling brotli v7.0.0
   Compiling sha2 v0.10.9
   Compiling icu_provider v2.1.1
   Compiling icu_properties v2.1.2
   Compiling icu_normalizer v2.1.1
   Compiling rustls-webpki v0.103.8
   Compiling idna_adapter v1.2.1
   Compiling idna v1.1.0
   Compiling flate2 v1.1.5
   Compiling hyper v1.8.1
   Compiling url v2.5.7
   Compiling itertools v0.10.5
   Compiling hyper-util v0.1.19
   Compiling uuid v1.20.0
   Compiling seq-macro v0.3.6
   Compiling ryu-js v0.2.2
   Compiling hex v0.4.3
   Compiling cast v0.3.0
   Compiling serde_jcs v0.1.0
   Compiling rayon v1.11.0
   Compiling criterion-plot v0.5.0
   Compiling clap v4.5.56
   Compiling tokio-stream v0.1.17
   Compiling tinytemplate v1.2.1
   Compiling ciborium v0.2.2
   Compiling metrics v0.24.3
   Compiling plotters v0.3.7
   Compiling is-terminal v0.4.17
   Compiling anes v0.1.6
   Compiling oorandom v11.1.5
   Compiling tokio-test v0.4.5
   Compiling arrow-array v54.3.1
   Compiling tokio-rustls v0.26.4
   Compiling hyper-rustls v0.27.7
   Compiling reqwest v0.12.28
   Compiling criterion v0.5.1
   Compiling arrow-select v54.3.1
   Compiling arrow-ipc v54.3.1
   Compiling arrow-arith v54.3.1
   Compiling arrow-row v54.3.1
   Compiling object_store v0.11.2
   Compiling zstd v0.13.3
   Compiling arrow-cast v54.3.1
   Compiling arrow-ord v54.3.1
   Compiling arrow-string v54.3.1
   Compiling arrow-json v54.3.1
   Compiling arrow-csv v54.3.1
   Compiling parquet v54.3.1
   Compiling arrow v54.3.1
   Compiling arco-core v0.1.0 (/Users/ethanurbanski/arco/.worktrees/codex-prod-go-closure-batch3/crates/arco-core)
   Compiling arco-catalog v0.1.0 (/Users/ethanurbanski/arco/.worktrees/codex-prod-go-closure-batch3/crates/arco-catalog)
error[E0063]: missing field `catalog_id` in initializer of `NamespaceRecord`
  --> crates/arco-catalog/benches/catalog_lookup.rs:39:18
   |
39 |         .map(|i| parquet_util::NamespaceRecord {
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing `catalog_id`

For more information about this error, try `rustc --explain E0063`.
error: could not compile `arco-catalog` (bench "catalog_lookup") due to 1 previous error
